--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/HEAD/theme.css
 BASE_THEME=light
-SITE_NAME_HEADER=神
-SITE_BASE_URL=https://enneaaaio.vercel.app/
-SHOW_CREATED_TIMESTAMP=false
+SITE_NAME_HEADER=ennea
+SITE_BASE_URL=https://enneaaaio.vercel.app
+SHOW_CREATED_TIMESTAMP=true
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
