--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-THEME=https://raw.githubusercontent.com/AnubisNekhet/AnuPpuccin/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/HEAD/theme.css
 BASE_THEME=light
-SITE_NAME_HEADER=九木
+SITE_NAME_HEADER=九木🌲
 SITE_BASE_URL=https://enneaaaio.vercel.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
