--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ THEME=https://raw.githubusercontent.com/colineckert/obsidian-things/HEAD/theme.c
 BASE_THEME=light
 SITE_NAME_HEADER=九木🌲
 SITE_BASE_URL=https://enneaaaio.vercel.app
-SHOW_CREATED_TIMESTAMP=false
-TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
+SHOW_CREATED_TIMESTAMP=true
+TIMESTAMP_FORMAT=YYYY-MM-DD HH:mm
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
