--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=false
-dgShowInlineTitle=true
-dgShowFileTree=false
+dgShowInlineTitle=false
+dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
