--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BASE_THEME=light
 SITE_NAME_HEADER=九木🌲
 SITE_BASE_URL=https://enneaaaio.vercel.app
 SHOW_CREATED_TIMESTAMP=true
-TIMESTAMP_FORMAT=YYYY-MM-DD
+TIMESTAMP_FORMAT=MMM dd, yyyy HH:mm
 SHOW_UPDATED_TIMESTAMP=false
 NOTE_ICON_DEFAULT=1
 NOTE_ICON_TITLE=true
